# android-source-explorer-mcp

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.github/workflows/: homebrew-release.yml
Formula/: android-source-explorer.rb
scripts/: generate_homebrew_resources.py
src/android_source_explorer/: cli.py  config.py  server.py
src/android_source_explorer/lsp/: lsp_client.py  lsp_installer.py  lsp_manager.py
src/android_source_explorer/parser/: tree_sitter_parser.py
src/android_source_explorer/sync/: androidx_sync.py  artifact_catalog.py  framework_sync.py  index_builder.py
