[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "android-source-explorer"
version = "0.1.0"
description = "The source explorer for AOSP internals and the Jetpack libraries"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.2",
    "httpx>=0.27.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-kotlin>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
android-source-explorer = "android_source_explorer.cli:main"
